tests/parser-test-files/bad-files/parse-while-let.3.error
error: Malformed while-let expression
  --> test:4:32
   |
 4 |  (define f (while-let (Some x) z))
   |                                 ^ expected =
